cmake_minimum_required(VERSION 3.13)
project(WrittenExamPreparation)

set(CMAKE_CXX_STANDARD 14)

add_executable(WrittenExamPreparation1 main1.cpp)
add_executable(WrittenExamPreparation2 main2.cpp)
add_executable(WrittenExamPreparation3 main3.cpp)
add_executable(WrittenExamPreparation4 main4.cpp)
add_executable(WrittenExamPreparation5 main5.cpp)
add_executable(WrittenExamPreparation6 main6.cpp)
add_executable(WrittenExamPreparationBeverage main.cpp)